--- a/index.html
+++ b/index.html
@@ -2,10 +2,94 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Meu Site no GitHub Pages</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Ferramentas Hacking - Termux</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Olá, mundo! 🌍</h1>
-  <p>Este é meu primeiro site rodando no GitHub Pages.</p>
+
+  <header>
+  <div class="ascii-mask">
+  </div>
+ <h1> Ferramentas Hacking.</h1>
+    <p>@gusxtyz · Desenvolvedor.</p>
+  </header>
+
+  <main>
+    <section class="card">
+      <h2>Gobuster</h2>
+      <ul>
+        <li>O<strong> Gobuster</strong> ele é uma ferramenta de enumeração e brute force.</li>
+        <li>Também é bastante <strong>utilizada</strong> para descobrir diretórios, arquivos ocultos</li>
+        <li>Subdomínios ou DNS e host virtuais em servidores web.</li>
+      </ul>
+      <a href="./beki/qwerty.html" class="btn">Interagir</a>
+    </section>
+
+    <section class="card">
+      <h2>XSS strike</h2>
+      <ul>
+        <li>Ferramenta avançada muito utilizada para detectar e explorar vulnerabilidades </li>
+        <li><strong>Cross-Site Scripting (XSS)</strong></li>
+        <li>Em aplicações web, Ele serve para identificar falhas que permitem a injeção de código malicioso em páginas.</li>
+      </ul>
+      <a href="./beki/pois.html" class="btn">Interagir</a>
+    </section>
+
+    <section class="card">
+      <h2>Programas OpenSource's</h2>
+      <div class="depo">
+        <p>Invadir Insta</p>
+        <strong>@Gusxtyz</strong>
+      </div>
+      <div class="depo">
+        <p>Invadir Webcam</p>
+        <strong>@Gusxtyz</strong>
+      </div>
+       <div class="depo">
+        <p>Bot Telegram</p>
+        <strong>@Gusxtyz</strong>
+      </div>
+       <div class="depo">
+        <p>Bot Whatsapp</p>
+        <strong>@Gusxtyz</strong>
+      </div>
+      <div class="depo">
+        <p>Bot Discord</p>
+        <strong>@Gusxtyz</strong>
+      </div>
+       <div class="depo">
+        <p>Attack Ddos</p>
+        <strong>@Gusxtyz</strong>
+      </div>
+      <div class="depo">
+        <p>Coletar IP - Longitude/ latitude</p>
+        <strong>@Gusxtyz</strong>
+      </div>
+    </section>
+
+    <section class="card">
+      <h2>Reembolso</h2>
+      <p>Sendo direto, não. não tem reembolso. você só receberá o reembolso, caso o método ou script não estiver funcionando para você. nessa circunstância é permitido a solicitação de reembolso.</p>
+      <a href="#" class="btn">Reembolsar</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 Gusxtyz – todos os códigos sob MIT License</p>
+    <div class="icones">
+      <a href="https://github.com/gusxtzn" target="_blank" aria-label="GitHub">
+        <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.2 11.47.6.1.8-.27.8-.58v-2.1c-3.34.72-4.04-1.6-4.04-1.6-.55-1.4-1.34-1.78-1.34-1.78-1.08-.74.08-.72.08-.72 1.2.08 1.84 1.22 1.84 1.22 1.07 1.83 2.8 1.3 3.48 1 .1-.8.42-1.3.76-1.6-2.66-.3-5.46-1.32-5.46-5.92 0-1.3.47-2.38 1.22-3.22-.12-.3-.52-1.52.12-3.18 0 0 1-.02 3.06 1.22a10.7 10.7 0 0 1 5.48 0c2.04-1.24 3.06-1.22 3.06-1.22.64 1.66.24 2.88.12 3.18.76.84 1.22 1.92 1.22 3.22 0 4.6-2.8 5.62-5.46 5.92.42.36.8 1.08.8 2.18v3.24c0 .33.2.7.8.58C20.56 21.78 24 17.3 24 12 24 5.37 18.63 0 12 0z"/></svg>
+      </a>
+      <a href="https://t.me/Omaismaisdasrec" target="_blank" aria-label="Telegram">
+        <svg viewBox="0 0 24 24"><path d="M9.78 18.65l.31-4.65 7.3-6.62c1-.9 2.4-.9 2.4.6l-7.3 6.62-1.2 4.65zM1.5 12l5.3-2.1 11.2-4.5c1.5-.6 2.2.7 1.2 1.9L7.5 16.5l-2.2 6.2c-.5 1.5-1.9.8-1.4-.7l3.3-9.2-3.3 2.2z"/></svg>
+      </a>
+      <a href="https://youtube.com/@SxgModz" target="_blank" aria-label="YouTube">
+        <svg viewBox="0 0 24 24"><path d="M23.5 6.9c-.3-1.2-1.3-2.1-2.5-2.3C19.3 4 12 4 12 4s-7.3 0-9 .6C1.8 4.8.8 5.7.5 6.9c-.6 2.3-.6 7.1-.6 7.1s0 4.8.6 7.1c.3 1.2 1.3 2.1 2.5 2.3C4.7 23.2 12 23.2 12 23.2s7.3 0 9-.6c1.2-.2 2.2-1.1 2.5-2.3.6-2.3.6-7.1.6-7.1s0-4.8-.6-7.1zM9.5 15.5V8.5l6 3.5-6 3.5z"/></svg>
+      </a>
+    </div>
+  </footer>
+
+  <script src="script.js"></script>
 </body>
 </html>
