--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
   <main>
     <section class="card">
-      <h2>Gobuster</h2>
+      <h2>Invasão de Redes sociais</h2>
       <ul>
-        <li>O<strong> Gobuster</strong> ele é uma ferramenta de enumeração e brute force.</li>
-        <li>Também é bastante <strong>utilizada</strong> para descobrir diretórios, arquivos ocultos</li>
-        <li>Subdomínios ou DNS e host virtuais em servidores web.</li>
+        <li>Whatsapp <strong> </strong>Web and app</li>
+        <li>Telegram <strong>Via Bot</strong></li>
+        <li>Instagram <strong>link malicioso</strong></li>
       </ul>
       <a href="./beki/qwerty.html" class="btn">Interagir</a>
     </section>
