--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <section class="card">
       <h2>Invasão de Redes sociais</h2>
       <ul>
-        <li>Whatsapp <strong> </strong>Web and app</li>
+        <li>Whatsapp <strong>Web and app</strong></li>
         <li>Telegram <strong>Via Bot</strong></li>
         <li>Instagram <strong>link malicioso</strong></li>
       </ul>
@@ -27,11 +27,21 @@
     </section>
 
     <section class="card">
-      <h2>XSS strike</h2>
+      <h2>Base De Bots</h2>
       <ul>
-        <li>Ferramenta avançada muito utilizada para detectar e explorar vulnerabilidades </li>
-        <li><strong>Cross-Site Scripting (XSS)</strong></li>
-        <li>Em aplicações web, Ele serve para identificar falhas que permitem a injeção de código malicioso em páginas.</li>
+        <li><strong>Discord: Token</strong></li>
+        <li><strong>Telegram: Token</strong></li>
+        <li><strong>Whatsapp: Cod</strong></li>
+      </ul>
+      <a href="./beki/pois.html" class="btn">Interagir</a>
+    </section>
+
+    <section class="card">
+      <h2>Invasões Web</h2>
+      <ul>
+        <li><strong>Script Monitoramento de WebCam</strong></li>
+        <li><strong>Script Basic Ddos Sites</strong></li>
+        <li><strong>Script Coletar Ip</strong></li>
       </ul>
       <a href="./beki/pois.html" class="btn">Interagir</a>
     </section>
@@ -39,31 +49,7 @@
     <section class="card">
       <h2>Programas OpenSource's</h2>
       <div class="depo">
-        <p>Invadir Insta</p>
-        <strong>@Gusxtyz</strong>
-      </div>
-      <div class="depo">
-        <p>Invadir Webcam</p>
-        <strong>@Gusxtyz</strong>
-      </div>
-       <div class="depo">
-        <p>Bot Telegram</p>
-        <strong>@Gusxtyz</strong>
-      </div>
-       <div class="depo">
-        <p>Bot Whatsapp</p>
-        <strong>@Gusxtyz</strong>
-      </div>
-      <div class="depo">
-        <p>Bot Discord</p>
-        <strong>@Gusxtyz</strong>
-      </div>
-       <div class="depo">
-        <p>Attack Ddos</p>
-        <strong>@Gusxtyz</strong>
-      </div>
-      <div class="depo">
-        <p>Coletar IP - Longitude/ latitude</p>
+        <p>By:</p>
         <strong>@Gusxtyz</strong>
       </div>
     </section>
@@ -76,7 +62,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Gusxtyz – todos os códigos sob MIT License</p>
+    <p>© 2025 Gusxtyz – Códigos full open source, não me responsabilizo pelo uso.</p>
     <div class="icones">
       <a href="https://github.com/gusxtzn" target="_blank" aria-label="GitHub">
         <svg viewBox="0 0 24 24"><path d="M12 0C5.37 0 0 5.37 0 12c0 5.3 3.44 9.8 8.2 11.47.6.1.8-.27.8-.58v-2.1c-3.34.72-4.04-1.6-4.04-1.6-.55-1.4-1.34-1.78-1.34-1.78-1.08-.74.08-.72.08-.72 1.2.08 1.84 1.22 1.84 1.22 1.07 1.83 2.8 1.3 3.48 1 .1-.8.42-1.3.76-1.6-2.66-.3-5.46-1.32-5.46-5.92 0-1.3.47-2.38 1.22-3.22-.12-.3-.52-1.52.12-3.18 0 0 1-.02 3.06 1.22a10.7 10.7 0 0 1 5.48 0c2.04-1.24 3.06-1.22 3.06-1.22.64 1.66.24 2.88.12 3.18.76.84 1.22 1.92 1.22 3.22 0 4.6-2.8 5.62-5.46 5.92.42.36.8 1.08.8 2.18v3.24c0 .33.2.7.8.58C20.56 21.78 24 17.3 24 12 24 5.37 18.63 0 12 0z"/></svg>
