--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
   <div class="ascii-mask">
   </div>
- <h1> Ferramentas Hacking.</h1>
+ <h1> Ferramentas Dev.</h1>
     <p>@gusxtyz · Desenvolvedor.</p>
   </header>
 
@@ -55,9 +55,9 @@
     </section>
 
     <section class="card">
-      <h2>Reembolso</h2>
-      <p>Sendo direto, não. não tem reembolso. você só receberá o reembolso, caso o método ou script não estiver funcionando para você. nessa circunstância é permitido a solicitação de reembolso.</p>
-      <a href="#" class="btn">Reembolsar</a>
+      <h2>Conceito</h2>
+      <p>Este site foi criado com o objetivo de disponibilizar meus scripts e ferramentas de Termux para fins educacionais. A proposta é oferecer recursos que possam ajudar no aprendizado e na prática de tecnologia, sempre de forma responsável. Ressalto que não apoio nem concordo com o uso dessas ferramentas para atividades ilegais.</p>
+      <a href="#" class="btn">Entendo</a>
     </section>
   </main>
 
